--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
           remote_path: /var/www/docs.pokeskies.com/
           remote_host: ${{ secrets.STARLIGHT_HOST }}
           remote_user: ${{ secrets.STARLIGHT_HOST }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+          remote_key: ${{ secrets.STARLIGHT_KEY }}
