--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           switches: -avz --delete
           path: dist/
-          remote_path: /var/www/docs.pokeskies.com/
+          remote_path: /var/www/docs.skiesdev.com/
           remote_host: ${{ secrets.STARLIGHT_HOST }}
           remote_user: ${{ secrets.STARLIGHT_USER }}
           remote_key: ${{ secrets.STARLIGHT_KEY }}
